--- a/server/.openapi-generator-ignore
+++ b/server/.openapi-generator-ignore
@@ -22,5 +22,4 @@
 # Then explicitly reverse the ignore rule for a single file:
 #!docs/README.md
 
-go/api_default.go
-go/api_default_service.go
+main.go
